fixed text contrast again

--- a/src/components/LandingPage.module.scss
+++ b/src/components/LandingPage.module.scss
@@ -18,7 +18,7 @@
     border-bottom: 2px solid $color-white;
 
     & > h3 {
-        color: rgba($color-white, 0.85);
+        color: $color-white;
         font-size: 6rem;
         font-weight: 300;
         text-align: center;
